################################################################################
# Package settings
################################################################################

[package]
name = "mono-rt"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
description = "Dynamic bindings to the Mono runtime for process injection into Unity games and Mono-hosted applications on Windows"
readme = "README.md"
repository = "https://github.com/theo-abel/mono-rt"
license = "GPL-3.0-only"
keywords = ["mono", "unity", "runtime", "bindings", "gamedev"]
categories = ["game-development", "api-bindings", "os::windows-apis"]

[dependencies]
thiserror = "2.0.18"
tracing = "0.1.44"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }

################################################################################
# Lint settings
################################################################################

[lints.clippy]
# Enable pedantic lint group
pedantic = "warn"
# restriction = "warn" # TODO: enable when ready to suffer

[lints.rust]
# Deny all warnings
warnings = "deny"

################################################################################
# Profile settings
################################################################################

[profile.release]
opt-level = 3  # use better optimizations
debug = false
strip = true
# enable link-time optimization, which can improve performance
# but also increase build time
lto = true
codegen-units = 1
