################################################################################
# Package settings
################################################################################

[package]
name = "mono-rt"
version = "0.3.0"
edition = "2024"
rust-version = "1.95.0"
description = "Dynamic bindings to the Mono runtime for process injection into Unity games and Mono-hosted applications on Windows"
readme = "README.md"
repository = "https://github.com/theo-abel/mono-rt"
license = "GPL-3.0-only"
keywords = ["mono", "unity", "runtime", "bindings", "gamedev"]
categories = ["game-development", "api-bindings", "os::windows-apis"]

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]

# exclude integration-test sources and fixture assets from the published crate
exclude = [
    "src/bin/**",
    "tests/fixtures/**",
]

################################################################################
# Features
################################################################################

[features]
# enables the mono-rt-integration test binary; not part of the public API
integration-tests = []

[dependencies]
thiserror = "2.0.18"
tracing = "0.1.44"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }

[[bin]]
name = "mono-rt-integration"
path = "src/bin/integration/main.rs"
required-features = ["integration-tests"]

################################################################################
# Lint settings
################################################################################

[lints.clippy]
# Enable pedantic lint group
pedantic = "warn"
# restriction = "warn" # TODO: enable when ready to suffer

[lints.rust]
# Deny all warnings
warnings = "deny"

################################################################################
# Profile settings
################################################################################

[profile.release]
opt-level = 3  # use better optimizations
debug = false
strip = true
# enable link-time optimization, which can improve performance
# but also increase build time
lto = true
codegen-units = 1
